--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,8 @@
 kotlin.incremental=false
 org.gradle.daemon=false
-org.gradle.parallel=false
+org.gradle.parallel=true
 org.gradle.configureondemand=false
 kotlin.compiler.execution.strategy=in-process
 kotlin.daemon.debug.log=true
-kotlin.js.compiler=ir
 org.gradle.jvmargs=-Xmx2g
 version=0.0.1
-kapt.use.k2=true
