Make build configurable

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,4 @@ kotlin.compiler.execution.strategy=in-process
 kotlin.daemon.debug.log=true
 org.gradle.jvmargs=-Xmx2g
 version=0.0.1
+javaVersion=17
