--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,5 @@
-kotlin.incremental=false
-org.gradle.daemon=false
 org.gradle.parallel=true
-org.gradle.configureondemand=false
 kotlin.compiler.execution.strategy=in-process
-kotlin.daemon.debug.log=true
 org.gradle.jvmargs=-Xmx2g
-version=0.0.1
+pluginVersion=1.0.0
+groupId=dev.benelli
